Fix story graphics.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body id="t" class="offline">
 
 <a id="infoBox" style="background-color:#eee;color:#111;border-radius:0 0 20px 0;padding:10px;text-decoration:none" href="info.html">
-💁 Information
+👩‍💻 Git
 </a>
 
     <div id="messageBox" class="sendmessage">
