--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body id="t" class="offline">
+<a id="github" onmouseover="gitHover()" href="https://github.com/enirehtan/amandarine/wiki"><img style="border: 0;" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/orange-black.png" alt="Fork me on GitHub"></a>
 
 <a id="infoBox" style="background-color:#eee;color:#111;border-radius:0 0 20px 0;padding:10px;text-decoration:none" href="info.html">
 👩‍💻 Git
@@ -42,6 +43,29 @@
 </body>
 
 <script>
+
+    document.onkeydown = function(evt) {
+	    evt = evt || window.event;
+	    if (evt.keyCode == 32) {
+		    var box = document.getElementById("github");
+		    box.classList.add("off-screen");
+	    }
+    };
+
+    document.onmousedown = function(evt) {
+	    var path = event.path || (event.composedPath && event.composedPath());
+	    if (!path || !path.length || path[0].alt != "Fork me on GitHub") {
+		    var box = document.getElementById("github");
+		    box.classList.add("off-screen");
+	    }
+    };
+
+    function gitHover() {
+	    var box = document.getElementById("github");
+	    box.classList.remove("off-screen");
+    }
+
+/*
     document.onkeydown = function(evt) {
 	    evt = evt || window.event;
 	    if (evt.keyCode == 32) {
@@ -53,6 +77,7 @@
 	    var box = document.getElementById("messageBox");
 	    box.style.visibility="hidden";
     };
+*/
 </script>
     
 </html>
