The game is renamed to Amandarine.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <title >NatherRUN! Even RUN! 🏃</title>
+<title>ᵃᵐᵃⁿᵈᵃʳⁱⁿᵉ🏃ᴼⁿᵀʰᵉᴿᵘⁿ</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="index.js"></script>
@@ -13,15 +13,12 @@
 <body id="t" class="offline">
 <a id="github" onmouseover="gitHover()" href="https://github.com/enirehtan/amandarine/wiki"><img style="border: 0;" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/orange-black.png" alt="Fork me on GitHub"></a>
 
-<a id="infoBox" style="background-color:#eee;color:#111;border-radius:0 0 20px 0;padding:10px;text-decoration:none" href="info.html">
-👩‍💻 Git
-</a>
 
+<!--
     <div id="messageBox" class="sendmessage">
-         <div style="font-weight:bold;text-align: center;font-family: 'Open Sans', sans-serif;font-size:20px">NatheRUN! Even RUN! 🏃</div>
-         <div style="text-align: center;font-family: 'Open Sans', sans-serif;font-size:14px;">( Press Space Button )</div>
-         <div class="niokbutton" onclick="okbuttonsend()"></div>
+         <div style="font-weight:bold;text-align: center;font-family: 'Open Sans', sans-serif;font-size:20px">Amandarine</div>
     </div>
+-->
     <div id="main-frame-error" class="interstitial-wrapper">
         <div id="main-content">
             <div class="icon icon-offline" alt=""></div>
