Project managements & indentations.

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <a id="github" onmouseover="gitHover()" href="https://github.com/enirehtan/amandarine/wiki"><img style="border: 0;" src="assets/github.png" alt="Fork me on GitHub"></a>
 <a id="facebook" onmouseover="gitHover()" href="https://www.facebook.com/Amandarine-Frontier-536061560224979"><img style="border: 0;" src="assets/facebook.png" alt="Facebook"></a>
 
+<div style="padding:5px;border-radius:0 0 0 5px;color:white;background-color:red;position:fixed;top:0px;right:0px;font-weight:bold;font-family:sans-serif"> BETA </div>
 
 <!--
     <div id="messageBox" class="sendmessage">
