--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <a id="github" onmouseover="gitHover()" href="https://github.com/enirehtan/amandarine/wiki"><img style="border: 0;" src="assets/github.png" alt="Fork me on GitHub"></a>
 <a id="facebook" onmouseover="gitHover()" href="https://www.facebook.com/Amandarine-Frontier-536061560224979"><img style="border: 0;" src="assets/facebook.png" alt="Facebook"></a>
 
-<div style="padding:5px;border-radius:0 0 0 5px;color:white;background-color:crimson;position:fixed;top:0px;right:0px;font-weight:bold;font-family:sans-serif;text-shadow: 0 0 15px #FFFFFF;"> b e t a </div>
+<div style="max-width:100px;padding:5px;border-radius:0 0 0 5px;color:white;background-color:crimson;position:fixed;top:0px;right:0px;font-weight:bold;font-family:sans-serif;text-shadow: 0 0 15px #FFFFFF;"> b e t a <div style="color:black;background-color:white;border-radius:3px;padding:5px;font-size:10px">The app is being tested mostly on PC and, once in a while, Chrome on Android. You are expected to experience issues on iOS until fixed. Pull requests are welcome.</div> </div>
 
 <!--
     <div id="messageBox" class="sendmessage">
@@ -34,6 +34,7 @@
             <img id="offline-resources-nat-sliding" src="assets/nat/sliding.png">
             <img id="offline-resources-nat-crash" src="assets/nat/crash.png">
             <img id="offline-resources-bicycle" src="assets/biking.png">
+            <img id="offline-resources-keys" src="assets/spacebar.png">
             <template id="audio-resources">
                 <audio id="offline-intro-music" src="assets/sounds/tangerine-amandarine-frontier-edition.mp3"></audio>
                 <audio id="offline-play-music" src="assets/sounds/tangerine-amandarine-frontier-game-play.mp3"></audio>
