Improve graphics initialization.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
 <title>ᵃᵐᵃⁿᵈᵃʳⁱⁿᵉ👟ᴼⁿᴰᵃᴿᵘⁿ</title>
+    <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="index.css">
 <!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
     <script src="index.js?version=0.6"></script>
@@ -14,7 +15,7 @@
 <a id="github" onmouseover="gitHover()" href="https://github.com/enirehtan/amandarine/wiki"><img style="border: 0;" src="assets/github.png" alt="Fork me on GitHub"></a>
 <a id="facebook" onmouseover="gitHover()" href="https://www.facebook.com/Amandarine-Frontier-536061560224979"><img style="border: 0;" src="assets/facebook.png" alt="Facebook"></a>
 
-<div style="max-width:100px;padding:5px;border-radius:0 0 0 5px;color:white;background-color:crimson;position:fixed;top:0px;right:0px;font-weight:bold;font-family:sans-serif;text-shadow: 0 0 15px #FFFFFF;"> b e t a <div style="color:black;background-color:white;border-radius:3px;padding:5px;font-size:10px">The app is being tested mostly on PC and, once in a while, Chrome on Android. You are expected to experience issues on iOS until fixed. Pull requests are welcome.</div> </div>
+<div style="max-width:100px;padding:5px;border-radius:0 0 0 5px;color:white;background-color:crimson;position:fixed;top:0px;right:0px;font-weight:bold;font-family:sans-serif;text-shadow: 0 0 15px #FFFFFF;text-align:center;">b e t a<div style="text-align:left;color:black;background-color:white;border-radius:3px;padding:5px;font-size:10px">The app is being tested mostly on PC and, once in a while, Chrome on Android. You are expected to experience issues on iOS until fixed. Pull requests are welcome.</div> </div>
 
 <!--
     <div id="messageBox" class="sendmessage">
