--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-<title>ᵃᵐᵃⁿᵈᵃʳⁱⁿᵉ👟ᴼⁿᴰᵃᴿᵘⁿ</title>
+<title>On • Da • Runᴮᴱᵀᴬ ⁝ Amandarine </title>
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="index.css">
 <!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
@@ -14,8 +14,9 @@
 <body id="t" class="offline">
 <a id="github" onmouseover="gitHover()" href="https://github.com/enirehtan/amandarine/wiki"><img style="border: 0;" src="assets/github.png" alt="Fork me on GitHub"></a>
 <a id="facebook" onmouseover="gitHover()" href="https://www.facebook.com/Amandarine-Frontier-536061560224979"><img style="border: 0;" src="assets/facebook.png" alt="Facebook"></a>
+<a id="twitter" onmouseover="gitHover()" href="https://twitter.com/naturingmachine"><img style="border: 0;" src="assets/twitter.png" alt="Twitter"></a>
 
-<div style="max-width:100px;padding:5px;border-radius:0 0 0 5px;color:white;background-color:crimson;position:fixed;top:0px;right:0px;font-weight:bold;font-family:sans-serif;text-shadow: 0 0 15px #FFFFFF;text-align:center;">b e t a<div style="text-align:left;color:black;background-color:white;border-radius:3px;padding:5px;font-size:10px">The app is being tested mostly on PC and, once in a while, Chrome on Android. You are expected to experience issues on iOS until fixed. Pull requests are welcome.</div> </div>
+<div style="max-width:200px;padding:5px;border-radius:0 0 0 5px;color:white;background-color:crimson;position:fixed;top:0px;right:0px;font-weight:bold;font-family:sans-serif;text-shadow: 0 0 15px #FFFFFF;text-align:right;">🐝👁 ᴮᴱᵀᴬ<div style="text-align:left;color:black;background-color:white;border-radius:3px;padding:5px;font-size:10px">The app is being tested mostly on PC and, once in a while, Chrome on Android. You are expected to experience issues on iOS until fixed. Pull requests are welcome.</div> </div>
 
 <!--
     <div id="messageBox" class="sendmessage">
@@ -35,7 +36,15 @@
             <img id="offline-resources-nat-sliding" src="assets/nat/sliding.png">
             <img id="offline-resources-nat-crash" src="assets/nat/crash.png">
             <img id="offline-resources-bicycle" src="assets/biking.png">
-            <img id="offline-resources-keys" src="assets/spacebar.png">
+            <img id="offline-resources-console-button-left" src="assets/console-button-left.png">
+            <img id="offline-resources-console-button-right" src="assets/console-button-right.png">
+            <img id="offline-resources-console-button-music" src="assets/console-button-music.png">
+            <img id="offline-resources-console-button-graphics" src="assets/console-button-graphics.png">
+            <img id="offline-resources-console-button-restart" src="assets/console-button-restart.png">
+            <img id="offline-resources-console-button-trophy" src="assets/console-button-trophy.png">
+            <img id="offline-resources-console-button-n7e" src="assets/console-button-n7e.png">
+            <img id="offline-resources-console-button-reset" src="assets/console-button-reset.png">
+            <img id="offline-resources-shortkeys" src="assets/shortkeys.png">
             <template id="audio-resources">
                 <audio id="offline-intro-music" src="assets/sounds/tangerine-amandarine-frontier-edition.mp3"></audio>
                 <audio id="offline-play-music" src="assets/sounds/tangerine-amandarine-frontier-game-play.mp3"></audio>
@@ -63,6 +72,8 @@
 		    box.classList.add("banner-off-screen");
 		    box = document.getElementById("facebook");
 		    box.classList.add("banner-off-screen");
+		    box = document.getElementById("twitter");
+		    box.classList.add("banner-off-screen");
 	    }
     };
 
@@ -70,6 +81,8 @@
 		    var box = document.getElementById("github");
 		    box.classList.add("banner-off-screen");
 		    box = document.getElementById("facebook");
+		    box.classList.add("banner-off-screen");
+		    box = document.getElementById("twitter");
 		    box.classList.add("banner-off-screen");
     };
 
