--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </div>
 -->
     <div id="main-frame-error" class="interstitial-wrapper">
-        <div id="main-content">
+        <div id="main-content" class="runner-container">
             <div class="icon icon-offline" alt=""></div>
         </div>
         <div id="offline-resources">
