--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,9 @@
          <div style="font-weight:bold;text-align: center;font-family: 'Open Sans', sans-serif;font-size:20px">Amandarine</div>
     </div>
 -->
+    <div class="icon icon-offline" alt=""></div>
     <div id="main-frame-error" class="interstitial-wrapper">
-        <div id="main-content" class="runner-container">
-            <div class="icon icon-offline" alt=""></div>
-        </div>
+        <div id="main-content" class="runner-container"></div>
         <div id="offline-resources">
             <img id="offline-resources-1x" src="assets/default_100_percent/100-offline-sprite.png">
             <img id="offline-resources-2x" src="assets/default_200_percent/200-offline-sprite.png">
