--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,10 @@
             </template>
         </div>
     </div>
+
+<div style="font-family:sans-serif;padding:1px;font-size:13px;text-align:right;background-image: linear-gradient(90deg,#0000,#0000,white,white);opacity:0.7;width:100%;position:fixed;bottom:0px">You can also support this project by <a style="text-decoration:none;color:red;" href="https://www.redcrossfundraising.org/en/index.php/donation">making donations to the <font style="font-weight:bold">Thai Red Cross Society</font> <div style="display:inline-block;vertical-align:top"> <div style="display:grid;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div style="background-color:red"></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div></div></div></div></a>.</div>
+<div style="position:fixed;left:0;bottom:0;display:grid;margin:1px;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="border-radius:50%;background-color:black"></div><div></div><div></div><div></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div></div>
+
 </body>
 
 <script>
