--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <div id="offline-resources">
             <img id="offline-resources-1x" src="assets/default_100_percent/100-offline-sprite.png">
             <img id="offline-resources-2x" src="assets/default_200_percent/200-offline-sprite.png">
+            <img id="offline-resources-console" src="assets/console.png">
             <img id="offline-resources-nat-idling" src="assets/nat/idle.png">
             <img id="offline-resources-nat-running" src="assets/nat/running.png">
             <img id="offline-resources-nat-jumping" src="assets/nat/jumping.png">
