Assign shift controls,fix coding styles & graphics

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="index.css">
 <!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
-    <script src="index.js?version=0.6"></script>
+    <script src="index.js"></script>
 </head>
 
 <body id="t" class="offline">
