--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
 <title>On • Da • Runᴮᴱᵀᴬ ⁝ Amandarine </title>
+    <link rel="shortcut icon" sizes="32x32" href="assets/amdr-icon-64.png">
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="index.css">
 <!--    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
@@ -23,7 +24,6 @@
          <div style="font-weight:bold;text-align: center;font-family: 'Open Sans', sans-serif;font-size:20px">Amandarine</div>
     </div>
 -->
-    <div class="icon icon-offline" alt=""></div>
     <div id="main-frame-error" class="interstitial-wrapper">
         <div id="main-content" class="runner-container"></div>
         <div id="offline-resources">
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-<div style="font-family:sans-serif;padding:1px;font-size:13px;text-align:right;background-image: linear-gradient(90deg,#0000,#0000,white,white);opacity:0.7;width:100%;position:fixed;bottom:0px">You can also support this project by <a style="text-decoration:none;color:red;" href="https://www.redcross.or.th/donate/">making donations to the <font style="font-weight:bold">Thai Red Cross Society</font> <div style="display:inline-block;vertical-align:top"> <div style="display:grid;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div style="background-color:red"></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div></div></div></div></a>.</div>
+<div style="font-family:sans-serif;padding:1px;font-size:13px;text-align:right;background-image: linear-gradient(90deg,#0000,#0000,white,white);opacity:1.0;width:100%;position:fixed;bottom:0px">You can also support this project by <a style="text-decoration:none;color:red;" href="https://www.redcross.or.th/donate/">making donations to the <font style="font-weight:bold">Thai Red Cross Society</font> <div style="display:inline-block;vertical-align:top"> <div style="display:grid;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div style="background-color:red"></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div></div></div></div></a>.</div>
 <div style="position:fixed;left:0;bottom:0;display:grid;margin:1px;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="border-radius:50%;background-color:black"></div><div></div><div></div><div></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div></div>
 
 </body>
