--- a/ondarun/index.html
+++ b/ondarun/index.html
@@ -24,16 +24,18 @@
 
 
 <!-- BETA NOTICE -->
-<div style="background-color:#fee;max-width:200px;padding:5px;border-radius:5px;color:crimson;position:fixed;top:calc(50vh - 360px);left:calc(50vw - 400px);transform:rotate(-20deg);font-family:sans-serif;text-align:center;">🐝 <font style="font-weight:bold;color:black">ᴮᴱᵀᴬ</font> 👁<div style="text-align:left;color:black;border-radius:3px;padding:5px;font-size:10px">The app is being tested mostly on PC and, once in a while, Chrome on Android. <font style="color:crimson">You are expected to experience issues on iOS</font> until fixed. Pull requests are welcome.</div> </div>
+<div style="background-color:#fee;font-size:13px;line-height:16px;max-width:200px;padding:5px;border-radius:5px;color:crimson;position:fixed;top:calc(50% - 360px);left:calc(50% - 400px);transform:rotate(-20deg);font-family:sans-serif;text-align:center;">🐝 <font style="font-weight:bold;color:black">BETA</font> 👁<div style="text-align:left;color:black;border-radius:3px;padding:5px;font-size:10px;line-height:13px;">The app is being tested mostly on PC and, once in a while, Chrome on Android. <font style="color:crimson">You are expected to experience issues on iOS</font> until fixed. Pull requests are welcome.</div> </div>
 
-<a href="https://www.redcross.or.th/donate/"><div style="font-family:sans-serif;padding:20px;font-size:13px;text-align:center;background-color:#fee;left:calc(50vw + 140px);top:calc(50vh + 290px);position:absolute;width:200px;border-radius:5px;height 30px;transform:rotate(15deg);">You can support this project by <br><font style="text-decoration:none;color:red;">Making donations to the<br><font style="font-weight:bold">Thai Red Cross Society</font> <div style="display:inline-block;vertical-align:top"> <div style="display:grid;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div style="background-color:red"></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div></div></div></div></font>.</div></a>
+<a href="https://www.redcross.or.th/donate/"><div style="font-family:sans-serif;font-size:13px;line-height:16px;padding:20px;text-align:center;background-color:#fee;left:calc(50% + 140px);top:calc(50% + 290px);position:absolute;width:200px;border-radius:5px;height 30px;transform:rotate(15deg);">You can support this project by <br><font style="text-decoration:none;color:red;">Making donations to the<br><font style="font-weight:bold">Thai Red Cross Society</font> <div style="display:inline-block;vertical-align:top"> <div style="display:grid;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div style="background-color:red"></div><div style="background-color:red"></div><div></div><div style="background-color:red"></div><div></div></div></div></font>.</div></a>
 
 <n7e-ondarun></n7e-ondarun>
 <noscript>
 Please enable JavaScript to view this website.
 </noscript>
 
-<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-database.js"></script>
 <script>
   // Initialize Firebase
   var config = {
