Use separated file for Firebase configurations.

--- a/ondarun/index.html
+++ b/ondarun/index.html
@@ -89,19 +89,7 @@ Please enable JavaScript to view this website.
 <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-database.js"></script>
-<script>
-  // Initialize Firebase
-  var firebaseConfig = {
-    apiKey: "AIzaSyCXwJ5c05Er7-fvrCBYTDpOHasmyjO8Z5E",
-    authDomain: "amandarine-frontier.firebaseapp.com",
-    databaseURL: "https://amandarine-frontier.firebaseio.com",
-    projectId: "amandarine-frontier",
-    storageBucket: "amandarine-frontier.appspot.com",
-    messagingSenderId: "419071206734",
-    appId: "1:419071206734:web:f2eaa52611832c39"
-  };
-  firebase.initializeApp( firebaseConfig );
-</script>
+<script src="config.js"></script>
 
 <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 <script type="module" src="src/components/n7e-ondarun.js"></script>
