--- a/ondarun/index.html
+++ b/ondarun/index.html
@@ -27,7 +27,7 @@
 
 
 <!-- BETA NOTICE -->
-<div style="background-color:#fee;font-size:13px;line-height:16px;min-height:100px;max-width:200px;min-width:200px;padding:5px;border-radius:5px;position:fixed;top:calc(50% - 360px);left:calc(50% - 400px);transform:rotate(-20deg);font-family:sans-serif;text-align:center;"><font id="version-banner" style="font-weight:bold;color:black">Version . . . .</font><div style="text-align:left;color:black;border-radius:3px;padding:5px;font-weight:bold;font-size:13px;line-height:13px;"><font style="color:crimson">
+<div style="background-color:#fee;font-size:13px;line-height:16px;min-height:100px;max-width:200px;min-width:200px;padding:5px;border-radius:5px;position:fixed;top:calc(50% - 360px);left:calc(50% - 400px);transform:rotate(-20deg);font-family:sans-serif;text-align:center;"><font id="version-banner" style="font-weight:bold;color:black">Version . . . .</font><div style="text-align:left;color:black;border-radius:3px;padding:5px;font-weight:normal;font-size:13px;line-height:13px;"><font style="color:Maroon">
 • 🏆 Link SNS profile to keep scores/settings/items.<br/>
 • 🖼 Adjust graphics display if your box is too slow.<br/>
 </div> </div>
