--- a/ondarun/index.html
+++ b/ondarun/index.html
@@ -32,7 +32,7 @@
 • 🖼 Adjust graphics display if your box is too slow.<br/>
 </div> </div>
 
-<n7e-ondarun></n7e-ondarun>
+<n7e-ondarun-element></n7e-ondarun-element>
 <noscript>
 Please enable JavaScript to view this website.
 </noscript>
@@ -83,13 +83,14 @@ Please enable JavaScript to view this website.
     };
 */
 </script>
-<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-database.js"></script>
+
 <script src="config.js"></script>
 
 <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-<script type="module" src="src/components/n7e-ondarun.js"></script>
+<script type="module" src="src/components/n7e-ondarun-element.js"></script>
 
 <template id="audio-resources">
   <audio id="offline-intro-music" src="assets/sounds/tangerine-amandarine-frontier-edition.mp3"></audio>
