Remove old script from index.html

--- a/ondarun/index.html
+++ b/ondarun/index.html
@@ -20,8 +20,8 @@
 
 <body>
 
-<a id="github" onmouseover="gitHover()" href="https://github.com/naturing-machine/amandarine/wiki"><img style="border: 0;" src="assets/github.png" alt="Fork me on GitHub"></a>
-<a id="redcross" onmouseover="gitHover()" href="https://www.redcrossfundraising.org/"><img style="border: 0;" src="assets/redcross.png" alt="Thai Red Cross"></a>
+<a id="github" href="https://github.com/naturing-machine/amandarine/wiki"><img style="border: 0;" src="assets/github.png" alt="Fork me on GitHub"></a>
+<a id="redcross" href="https://www.redcrossfundraising.org/"><img style="border: 0;" src="assets/redcross.png" alt="Thai Red Cross"></a>
 
 
 <!-- BETA NOTICE -->
