Add reminding banner on beta server.

--- a/ondarun/index.html
+++ b/ondarun/index.html
@@ -25,10 +25,13 @@
 
 
 <!-- BETA NOTICE -->
-<div id="game-banner" style="opacity:0; visibility:hidden; transition: opacity 1s linear;background-color:#fee;font-size:13px;line-height:16px;min-height:100px;max-width:200px;min-width:200px;padding:5px;border-radius:5px;position:fixed;top:calc(50% - 360px);left:calc(50% - 400px);transform:rotate(-20deg);font-family:sans-serif;text-align:center;"><font id="version-banner" style="font-weight:bold;color:black">Version . . . .</font><div style="text-align:left;color:black;border-radius:3px;padding:5px;font-weight:normal;font-size:13px;line-height:13px;"><font style="color:Maroon">
+<div id="game-banner" style="opacity:0; visibility:hidden; transition: opacity 1s linear;background-color:#fee;font-size:13px;line-height:16px;min-height:100px;max-width:200px;min-width:200px;padding:5px;border-radius:5px;position:fixed;top:calc(50% - 360px);left:calc(50% - 400px);transform:rotate(-20deg);font-family:sans-serif;text-align:center;">
+<font id="version-banner" style="font-weight:bold;color:black">Version . . . .</font>
+<div id="message-banner" style="text-align:left;color:black;border-radius:3px;padding:5px;font-weight:normal;font-size:13px;line-height:13px;"><font style="color:Maroon">
 • 🏆 Link SNS profile to keep scores/settings/items.<br/>
 • 🖼 Adjust graphics display if your box is too slow.<br/>
-</div> </div>
+</div>
+</div>
 
 <n7e-ondarun-element></n7e-ondarun-element>
 <noscript>
