Clean the css in index.html

--- a/ondarun/index.html
+++ b/ondarun/index.html
@@ -23,14 +23,13 @@
 <a id="github" href="https://github.com/naturing-machine/amandarine/wiki"><img style="border: 0;" src="assets/github.png" alt="Fork me on GitHub"></a>
 <a id="redcross" href="https://www.redcrossfundraising.org/"><img style="border: 0;" src="assets/redcross.png" alt="Thai Red Cross"></a>
 
-
 <!-- BETA NOTICE -->
-<div id="game-banner" style="opacity:0; visibility:hidden; transition: opacity 1s linear;background-color:#fee;font-size:13px;line-height:16px;min-height:100px;max-width:200px;min-width:200px;padding:5px;border-radius:5px;position:fixed;top:calc(50% - 360px);left:calc(50% - 400px);transform:rotate(-20deg);font-family:sans-serif;text-align:center;">
-<font id="version-banner" style="font-weight:bold;color:black">Version . . . .</font>
-<div id="message-banner" style="text-align:left;color:black;border-radius:3px;padding:5px;font-weight:normal;font-size:13px;line-height:13px;"><font style="color:Maroon">
-• 🏆 Link SNS profile to keep scores/settings/items.<br/>
-• 🖼 Adjust graphics display if your box is too slow.<br/>
-</div>
+<div id="game-banner">
+  <font id="version-banner">Version . . . .</font>
+  <div id="message-banner">
+    • 🏆 Link SNS profile to keep scores/settings/items.<br/>
+    • 🖼 Adjust graphics display if your box is too slow.<br/>
+  </div>
 </div>
 
 <n7e-ondarun-element></n7e-ondarun-element>
@@ -56,7 +55,13 @@ Please enable JavaScript to view this website.
   <audio id="amandarine-frontier" src="assets/sounds/amandarine-frontier.mp3"></audio>
 </template>
 
-<div style="position:fixed;left:0;bottom:0;display:grid;margin:1px;width:15px;height:15px;grid-template-columns:auto auto auto"><div></div><div style="border-radius:50%;background-color:black"></div><div></div><div></div><div></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div></div>
+<!--
+<div style="position:fixed;left:0;bottom:0;display:grid;margin:1px;width:15px;height:15px;grid-template-columns:auto auto auto">
+  <div></div><div style="border-radius:50%;background-color:black"></div><div></div>
+  <div></div><div></div><div style="border-radius:50%;background-color:black"></div>
+  <div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div><div style="border-radius:50%;background-color:black"></div>
+</div>
+-->
 
 </body>
 
